# OpenCodeRunner

./: .env  .gitignore  LICENSE  README.md  call_server.py  client.py  draft.md  draft.py  install_envs.md  pyproject.toml  reinstall.sh  requirements.txt  server.py  setup.py  start_server.sh  test_client_cpp.py  test_client_python.py  uninstall.sh
cpp/: run_sijie.py
examples/: draft.py  test_bash.py  test_bash_str.py  test_cmake.py  test_dafny.py  test_java.py  test_java_str.py  test_javascript.py  test_javascript_str.py  test_python.py  test_python_str.py  test_python_str_func.py  test_python_str_input.py  test_python_str_input_idle.py  test_python_str_input_oom.py  test_python_str_torch.py  test_quick_run.py  test_sever_client.py  test_sql.py  test_sql_str.py  test_typescript.py  test_typescript_str.py
javascript/: main.js  package.json
languages/: process_result.py
languages/cpp/: run.py
languages/javascript/: package-lock.json
languages/python/: run.py
opencoderunner/: __init__.py  file_info.py  result_info.py  run.py  run_info.py  run_on_local.py  run_on_server.py  server.py
opencoderunner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
opencoderunner/infos/: file_info.py  result_info.py  run_info.py
opencoderunner/languages/: file.py  info.py  quick_run_bash.py  run_bash.py  run_dafny.py  run_java.py  run_javascript.py  (+3 more)
python/: data.py  draft.py  file.py  main.py  run.py
tests/: example.py  test_bash.py  test_dafny.py  test_java.py  test_javascript.py  test_python.py  test_sever_client.py  test_typescript.py
(+13 files in other folders)
